# phylosequel

./: README.md  metadata.csv  requirements.txt  rpackage.py  setup.cfg  setup.py  version.py
data/: abundance_w_taxa.txt  abundance_w_taxa_and_name.txt  abundance_wo_taxa.txt  metadata.csv  metadata_transpose.csv  taxonomy.txt  taxonomy2.txt
dir/files/: .Rhistory  abundance.txt  phylogeny.nwk  sumeet.rds
envs/: basic.yaml
envs/R/: install_r_package.R
phylosequel/: phyloseq.R  runner.py
phylosequel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phylosequel/test/: test.py
scripts/: _version.py  phyloseq.py  phylosequel.py
test_phylo/files/: metadata.csv  taxonomy.txt  test_phylo.rds
