[metadata]
author = Sumeet Tiwari
author_email = sumeet.kumartt@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3 :: Only
description = Converting kraken2\bracken report to phyloseq object
download_url = https://github.com/quadram-institute-bioscience/phylosequel
keywords = kraken2, bracken, phyloseq
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sumeet Tiwari
platforms = MacOS, Linux
maintainer_email = sumeet.kumartt@gmail.com
name = phylosequel
url = https://github.com/quadram-institute-bioscience/phylosequel
version = attr: version.get
python_requires = >3.8

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy>=1.20.0
    setuptools>=68.1.0
    pandas>=2.0.3
    dateutils>=0.6.12
    pytz>=2023.3
    six>=1.16.0
    tzdata>=2023.3
    importlib-resources>=1.4.0
    more-itertools>=8.4.0
    pytest>=5.4.3
    xopen>=1.0.1
    biopython>=1.81

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob="*.md"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
#testpaths = phylosequel/test/test*.py

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503